k8s/base/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: titanic-api
  labels:
    name: titanic-api
